@@ -1,4 +1,4 @@
-################################################################################
+ ################################################################################
 #                        AlcoBot - Alcoholicz site bot.                        #
 #                 Copyright (c) 2005 Alcoholicz Scripting Team                 #
 ################################################################################
@@ -13,6 +13,7 @@
 #
 # Bot Options:
 # debugMode - Toggle debugging information (true/false).
+# localTime - Display time values in local time, otherwise UTC is used.
 # modules   - List of module names to load on start-up.
 # themeFile - Theme file to read, must be located in the "themes" dir.
 # varFiles  - List of variable definition files, must be located in the "vars" dir.
@@ -24,9 +25,10 @@ siteName  = Alcoholicz
 siteTag   = ALC
 
 debugMode = False
+localTime = True
 modules   = bouncer ftpd free groups help invite online pretimes readlogs sitecmd
-varFiles  = core.vars ioftpd.vars
 themeFile = default-io.theme
+varFiles  = core.vars ioftpd.vars
 
 #### FTPD
 #
