@@ -3,6 +3,7 @@ AlcoBot v0.7.0 (not released):
   NEW: Completed Project-ZS-NG support, for glFTPD only.
   NEW: Module for ioA support, named "ioa".
   NEW: Module to issue SITE commands from IRC, named "sitecmd".
+  NEW: Option to format time values in UTC or local time.
   NEW: Substitution type for sizes logged in megabytes.
   NEW: Support for nxAutoNuke v2.3 (the ANUKESIZE event).
   NEW: Uniform FTPD functions to resolve user names, user IDs, group names, and group IDs.
